--- a/frontend_html/styles.scss
+++ b/frontend_html/styles.scss
@@ -54,14 +54,14 @@ body {
     grid-row: 1 / span 1;
     grid-column: 2 / span 8;
     margin-top: 25px;
-    box-shadow: 3px 3px 2px 1px rgba(0,0,0,0.6);
+    box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.6);
   }
 
   #title_box {
     background-color: $primary;
     grid-row: 2 / span 1;
     grid-column: 4 / span 3;
-    box-shadow: 3px 3px 2px 1px rgba(0,0,0,0.6);
+    box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.6);
   }
 
   #side_content {
@@ -71,7 +71,7 @@ body {
     margin-bottom: 15px;
     margin-left: 15px;
     margin-right: 15px;
-    box-shadow: 3px 3px 2px 1px rgba(0,0,0,0.6);
+    box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.6);
 
   }
 
@@ -79,14 +79,14 @@ body {
     background-color: $primary;
     grid-row: 3 / span 1;
     grid-column: 3 / span 3;
-    box-shadow: 3px 3px 2px 1px rgba(0,0,0,0.6);
+    box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.6);
   }
 
   #upper_2 {
     background-color: $primary;
     grid-row: 3 / span 1;
     grid-column: 7 / span 3;
-    box-shadow: 3px 3px 2px 1px rgba(0,0,0,0.6);
+    box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.6);
   }
 
   #bottom {
@@ -94,7 +94,7 @@ body {
     grid-row: 4 / span 1;
     grid-column: 3 / span 7;
     margin-bottom: 15px;
-    box-shadow: 3px 3px 2px 1px rgba(0,0,0,0.6);
+    box-shadow: 3px 3px 2px 1px rgba(0, 0, 0, 0.6);
   }
 
 }
